refacor: 调整 commit.

--- a/.github/workflows/run_data_sync.yml
+++ b/.github/workflows/run_data_sync.yml
@@ -3,45 +3,31 @@ name: Run Data Sync
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 0 * * *'
+    - cron: '0 16 * * *'
   push:
     branches:
       - master
-    paths:
-      - run_page/nike_sync.py
-      - run_page/nike_to_strava_sync.py
-      - run_page/strava_sync.py
-      - run_page/gen_svg.py
-      - run_page/garmin_sync.py
-      - run_page/coros_sync.py
-      - run_page/keep_sync.py
-      - run_page/gpx_sync.py
-      - run_page/tcx_sync.py
-      - run_page/tcx_to_garmin_sync.py
-      - run_page/garmin_to_strava_sync.py
-      - run_page/keep_to_strava_sync.py
-      - run_page/oppo_sync.py
-      - requirements.txt
 
 env:
   # please change to your own config.
-  RUN_TYPE: pass # support strava/nike/garmin/coros/garmin_cn/garmin_sync_cn_global/keep/only_gpx/only_fit/nike_to_strava/strava_to_garmin/tcx_to_garmin/strava_to_garmin_cn/garmin_to_strava/garmin_to_strava_cn/oppo/db_updater, Please change the 'pass' it to your own
-  ATHLETE: yihong0618
-  TITLE: Yihong0618 Running
-  MIN_GRID_DISTANCE: 10 # change min distance here
-  TITLE_GRID: Over 10km Runs # also here
+  RUN_TYPE: keep # support strava/nike/garmin/coros/garmin_cn/garmin_sync_cn_global/keep/only_gpx/only_fit/nike_to_strava/strava_to_garmin/tcx_to_garmin/strava_to_garmin_cn/garmin_to_strava/garmin_to_strava_cn/codoon/oppo, Please change the 'pass' it to your own
+  ATHLETE: kingcanfish
+  TITLE: Kingcanfish Running
+  MIN_GRID_DISTANCE: 5.0 # change min distance here
+  TITLE_GRID: Over 5km Runs # also here
 
   # IGNORE_BEFORE_SAVING: True # if you want to ignore some data before saving, set this to True
   IGNORE_START_END_RANGE: 10 # Unit meter
   # Dont making this huge, just picking points you needing. https://developers.google.com/maps/documentation/utilities/polylineutility using this tool to making your polyline
   IGNORE_POLYLINE: 'ktjrFoemeU~IorGq}DeB'
   IGNORE_RANGE: 10 # Unit meter
-  SAVE_DATA_IN_GITHUB_CACHE: false # if you deploy in the vercel, check the README
+  SAVE_DATA_IN_GITHUB_CACHE: true # if you deploy in the vercal, check the README
   DATA_CACHE_PREFIX: 'track_data'
-  BUILD_GH_PAGES: true # If you do not need GitHub Page please set it to `false`
+  BUILD_GH_PAGES: false # If you do not need GitHub Page please set it to `false`
+  BUILD_VERCEL_PAGES: 'true'
   SAVE_TO_PARQENT: false # If you want to save the data to the repo, set it to `true`
   GENERATE_MONTH_OF_LIFE: true # If you want to generate the month of life, set it to `true`
-  BIRTHDAY_MONTH: 1989-03 # If you want to generate the month of life, set it to your birthday month, format is YYYY-MM
+  BIRTHDAY_MONTH: 2000-08 # If you want to generate the month of life, set it to your birthday month, format is YYYY-MM
 
 jobs:
   sync:
@@ -51,6 +37,8 @@ jobs:
       SAVE_DATA_IN_GITHUB_CACHE: ${{ steps.set_output.outputs.SAVE_DATA_IN_GITHUB_CACHE }}
       DATA_CACHE_PREFIX: ${{ steps.set_output.outputs.DATA_CACHE_PREFIX }}
       BUILD_GH_PAGES: ${{ steps.set_output.outputs.BUILD_GH_PAGES }}
+      BUILD_VERCEL_PAGES: ${{ steps.set_output.outputs.BUILD_VERCEL_PAGES }}
+
 
     steps:
       - name: Checkout
@@ -103,7 +91,7 @@ jobs:
       - name: Run sync Keep script
         if: env.RUN_TYPE == 'keep'
         run: |
-          python run_page/keep_sync.py ${{ secrets.KEEP_MOBILE }} ${{ secrets.KEEP_PASSWORD }} --with-gpx
+          python run_page/keep_sync.py ${{ secrets.KEEP_MOBILE }} ${{ secrets.KEEP_PASSWORD }} --sync-types running --with-gpx
 
       - name: Run sync Coros script
         if: env.RUN_TYPE == 'coros'
@@ -210,26 +198,27 @@ jobs:
           ATHLETE: ${{ env.ATHLETE }}
           MIN_GRID_DISTANCE: ${{ env.MIN_GRID_DISTANCE }}
         run: |
-          python run_page/gen_svg.py --from-db --title '$TITLE' --type github --github-style 'align-firstday' --athlete '$ATHLETE' --special-distance 10 --special-distance2 20 --special-color yellow --special-color2 red --output assets/github.svg --use-localtime --min-distance 0.5
-          python run_page/gen_svg.py --from-db --title '$TITLE_GRID' --type grid --athlete '$ATHLETE' --output assets/grid.svg --special-color yellow --special-color2 red --special-distance 20 --special-distance2 40 --use-localtime --min-distance '$MIN_GRID_DISTANCE'
+          python run_page/gen_svg.py --from-db --title "$TITLE" --type github --github-style 'align-firstday' --athlete "$ATHLETE" --special-distance 10 --special-distance2 20 --special-color yellow --special-color2 red --output assets/github.svg --use-localtime --min-distance 0.5
+          python run_page/gen_svg.py --from-db --title "$TITLE_GRID" --type grid --athlete "$ATHLETE" --output assets/grid.svg --special-color yellow --special-color2 red --special-distance 20 --special-distance2 40 --use-localtime --min-distance "$MIN_GRID_DISTANCE"
           python run_page/gen_svg.py --from-db --type circular --use-localtime
-          python run_page/gen_svg.py --from-db --year $(date +'%Y')  --language zh_CN --title '$(date +'%Y') Running' --type github --github-style 'align-firstday' --athlete '$ATHLETE' --special-distance 10 --special-distance2 20 --special-color yellow --special-color2 red --output assets/github_$(date +'%Y').svg --use-localtime --min-distance 0.5
+          python run_page/gen_svg.py --from-db --year $(date +'%Y')  --language zh_CN --title '$(date +'%Y') Running' --type github --github-style 'align-firstday' --athlete "$ATHLETE" --special-distance 10 --special-distance2 20 --special-color yellow --special-color2 red --output assets/github_$(date +'%Y').svg --use-localtime --min-distance 0.5
 
         # if you want use the style:the start day of each year always aligns with Monday. please use the following script:
-        # python run_page/gen_svg.py --from-db --title '${{ env.TITLE }}' --type github --github-style 'align-monday' --athlete '${{ env.ATHLETE }}' --special-distance 10 --special-distance2 20 --special-color yellow --special-color2 red --output assets/github.svg --use-localtime --min-distance 0.5
-        # python run_page/gen_svg.py --from-db --year $(date +'%Y')  --language zh_CN --title '$(date +'%Y') Running' --type github --github-style 'align-monday' --athlete '${{ env.ATHLETE }}' --special-distance 10 --special-distance2 20 --special-color yellow --special-color2 red --output assets/github_$(date +'%Y').svg --use-localtime --min-distance 0.5
+        # python run_page/gen_svg.py --from-db --title "$TITLE" --type github --github-style 'align-monday' --athlete "$ATHLETE" --special-distance 10 --special-distance2 20 --special-color yellow --special-color2 red --output assets/github.svg --use-localtime --min-distance 0.5
+        # python run_page/gen_svg.py --from-db --year $(date +'%Y')  --language zh_CN --title '$(date +'%Y') Running' --type github --github-style 'align-monday' --athlete "$ATHLETE" --special-distance 10 --special-distance2 20 --special-color yellow --special-color2 red --output assets/github_$(date +'%Y').svg --use-localtime --min-distance 0.5
       - name: Make month of life
         if: env.GENERATE_MONTH_OF_LIFE == 'true'
         env:
           BIRTHDAY_MONTH: ${{ env.BIRTHDAY_MONTH }}
+          ATHLETE: ${{ env.ATHLETE }}
         run: |
-          python run_page/gen_svg.py --from-db --type monthoflife --birth '${{env.BIRTHDAY_MONTH}}' --special-color '#f9d367'  --special-color2 '#f0a1a8' --output assets/mol_running.svg --use-localtime --athlete '${{env.ATHLETE}}' --title 'Runner Month of Life' --sport-type running
-          python run_page/gen_svg.py --from-db --type monthoflife --birth '${{env.BIRTHDAY_MONTH}}' --special-color '#f9d367'  --special-color2 '#f0a1a8' --output assets/mol_walking.svg --use-localtime --athlete '${{env.ATHLETE}}' --title 'Walker Month of Life' --sport-type walking
-          python run_page/gen_svg.py --from-db --type monthoflife --birth '${{env.BIRTHDAY_MONTH}}' --special-color '#f9d367'  --special-color2 '#f0a1a8' --output assets/mol_hiking.svg --use-localtime --athlete '${{env.ATHLETE}}' --title 'Hiker Month of Life' --sport-type hiking
-          python run_page/gen_svg.py --from-db --type monthoflife --birth '${{env.BIRTHDAY_MONTH}}' --special-color '#f9d367'  --special-color2 '#f0a1a8' --output assets/mol_cycling.svg --use-localtime --athlete '${{env.ATHLETE}}' --title 'Cylist Month of Life' --sport-type cycling
-          python run_page/gen_svg.py --from-db --type monthoflife --birth '${{env.BIRTHDAY_MONTH}}' --special-color '#f9d367'  --special-color2 '#f0a1a8' --output assets/mol.svg --use-localtime --athlete '${{env.ATHLETE}}' --title 'Month of Life' --sport-type all
-          python run_page/gen_svg.py --from-db --type monthoflife --birth '${{env.BIRTHDAY_MONTH}}' --special-color '#f9d367'  --special-color2 '#f0a1a8' --output assets/mol_swimming.svg --use-localtime --athlete '${{env.ATHLETE}}' --title 'Swimmer Month of Life' --sport-type swimming
-          python run_page/gen_svg.py --from-db --type monthoflife --birth '${{env.BIRTHDAY_MONTH}}' --special-color '#f9d367'  --special-color2 '#f0a1a8' --output assets/mol_skiing.svg --use-localtime --athlete '${{env.ATHLETE}}' --title 'Skier Month of Life' --sport-type skiing
+          python run_page/gen_svg.py --from-db --type monthoflife --birth "$BIRTHDAY_MONTH" --special-color '#f9d367'  --special-color2 '#f0a1a8' --output assets/mol_running.svg --use-localtime --athlete "$ATHLETE" --title 'Runner Month of Life' --sport-type running
+          python run_page/gen_svg.py --from-db --type monthoflife --birth "$BIRTHDAY_MONTH" --special-color '#f9d367'  --special-color2 '#f0a1a8' --output assets/mol_walking.svg --use-localtime --athlete "$ATHLETE" --title 'Walker Month of Life' --sport-type walking
+          python run_page/gen_svg.py --from-db --type monthoflife --birth "$BIRTHDAY_MONTH" --special-color '#f9d367'  --special-color2 '#f0a1a8' --output assets/mol_hiking.svg --use-localtime --athlete "$ATHLETE" --title 'Hiker Month of Life' --sport-type hiking
+          python run_page/gen_svg.py --from-db --type monthoflife --birth "$BIRTHDAY_MONTH" --special-color '#f9d367'  --special-color2 '#f0a1a8' --output assets/mol_cycling.svg --use-localtime --athlete "$ATHLETE" --title 'Cylist Month of Life' --sport-type cycling
+          python run_page/gen_svg.py --from-db --type monthoflife --birth "$BIRTHDAY_MONTH" --special-color '#f9d367'  --special-color2 '#f0a1a8' --output assets/mol.svg --use-localtime --athlete "$ATHLETE" --title 'Month of Life' --sport-type all
+          python run_page/gen_svg.py --from-db --type monthoflife --birth "$BIRTHDAY_MONTH" --special-color '#f9d367'  --special-color2 '#f0a1a8' --output assets/mol_swimming.svg --use-localtime --athlete "$ATHLETE" --title 'Swimmer Month of Life' --sport-type swimming
+          python run_page/gen_svg.py --from-db --type monthoflife --birth "$BIRTHDAY_MONTH" --special-color '#f9d367'  --special-color2 '#f0a1a8' --output assets/mol_skiing.svg --use-localtime --athlete "$ATHLETE" --title 'Skier Month of Life' --sport-type skiing
 
       - name: Save data to parqent
         if: env.SAVE_TO_PARQENT == 'true'
@@ -252,10 +241,12 @@ jobs:
           SAVE_DATA_IN_GITHUB_CACHE: ${{ env.SAVE_DATA_IN_GITHUB_CACHE }}
           DATA_CACHE_PREFIX: ${{ env.DATA_CACHE_PREFIX }}
           BUILD_GH_PAGES: ${{ env.BUILD_GH_PAGES }}
+          BUILD_VERCEL_PAGES: ${{ env.BUILD_VERCEL_PAGES }}
         run: |
           echo 'SAVE_DATA_IN_GITHUB_CACHE=$SAVE_DATA_IN_GITHUB_CACHE' >> '$GITHUB_OUTPUT'
           echo 'DATA_CACHE_PREFIX=$DATA_CACHE_PREFIX' >> '$GITHUB_OUTPUT'
           echo 'BUILD_GH_PAGES=$BUILD_GH_PAGES' >> '$GITHUB_OUTPUT'
+          echo 'BUILD_VERCEL_PAGES=$BUILD_VERCEL_PAGES' >> '$GITHUB_OUTPUT'
 
   publish_github_pages:
     if: needs.sync.result == 'success' && needs.sync.outputs.BUILD_GH_PAGES == 'true'
@@ -266,3 +257,10 @@ jobs:
       data_cache_prefix: ${{needs.sync.outputs.DATA_CACHE_PREFIX}}
     needs:
       - sync
+
+  publish_vercel_pages:
+    name: Build and publish Vercel Pages via vercel action
+    uses: ./.github/workflows/vercel-pages.yml
+    needs:
+      - sync
+    secrets: inherit
