--- a/.github/workflows/run_data_sync.yml
+++ b/.github/workflows/run_data_sync.yml
@@ -7,6 +7,21 @@ on:
   push:
     branches:
       - master
+    paths:
+      - run_page/nike_sync.py
+      - run_page/nike_to_strava_sync.py
+      - run_page/strava_sync.py
+      - run_page/gen_svg.py
+      - run_page/garmin_sync.py
+      - run_page/coros_sync.py
+      - run_page/keep_sync.py
+      - run_page/gpx_sync.py
+      - run_page/tcx_sync.py
+      - run_page/tcx_to_garmin_sync.py
+      - run_page/garmin_to_strava_sync.py
+      - run_page/keep_to_strava_sync.py
+      - run_page/oppo_sync.py
+      - requirements.txt
 
 env:
   # please change to your own config.
@@ -224,17 +239,7 @@ jobs:
         env:
           ATHLETE: ${{ env.ATHLETE }}
         run: |
-          # Generate year summary SVG for all years with activities
-          python -c "
-          import sqlite3
-          conn = sqlite3.connect('run_page/data.db')
-          cursor = conn.cursor()
-          cursor.execute('SELECT DISTINCT strftime(\"%Y\", start_date_local) as year FROM activities ORDER BY year')
-          years = [row[0] for row in cursor.fetchall() if row[0]]
-          conn.close()
-          for year in years:
-              print(year)
-          " | xargs -I{} python run_page/gen_svg.py --from-db --type year_summary --output assets/year_summary_{}.svg --summary-year {} --athlete "$ATHLETE"
+          python run_page/gen_svg.py --from-db --type year_summary --output assets/year_summary.svg --athlete "${{ env.ATHLETE }}"
 
       - name: Save data to parqent
         if: env.SAVE_TO_PARQENT == 'true'
