--- a/.github/workflows/vercel-pages.yml
+++ b/.github/workflows/vercel-pages.yml
@@ -90,10 +90,11 @@ jobs:
 
       - name: Install dependencies
         run: pnpm install
+
       - name: Build
         env:
           REPO_NAME: ${{ github.event.repository.name }}
-        run: PATH_PREFIX=/$REPO_NAME pnpm build
+        run: pnpm build
 
       - name: Deploy to Vercel
         id: vercel-action
